--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,17 +1,19 @@
 
-.App-logo {
-    animation: App-logo-spin infinite 20s linear;
-    height: 80px;
-    margin-top: 0.5em;
+.app-logo {
+    height: 90px;
+    margin-top: 8px;
+    padding-left: 20px;
 }
 
-.App-header {
+.app-header {
     background-color: #fff;
     height: 105px;
     color: black;
 }
 
-.App-title {
-    padding-top: 0.6em;
-    font-size: 2.5em;
+.app-title {
+    padding-top: 2px;
+    font-size: 90px;
+    font-weight: bold;
+    text-shadow: 0 0 10px rgb(251, 255, 0);
 }
