--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,12 +1,15 @@
-
 .app-logo {
     height: 90px;
     margin-top: 8px;
     padding-left: 20px;
+    animation-name: sunny;
+    animation-duration: 1s;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
 }
 
 .app-header {
-    background-color: #fff;
+    background-color: rgb(79, 136, 241);
     height: 105px;
     color: black;
 }
@@ -16,4 +19,9 @@
     font-size: 90px;
     font-weight: bold;
     text-shadow: 0 0 10px rgb(251, 255, 0);
+}
+
+@keyframes sunny {
+    from { opacity: 1; }
+    to { opacity: 0.75; }
 }
