--- a/src/components/header.css
+++ b/src/components/header.css
@@ -18,7 +18,7 @@
     padding-top: 2px;
     font-size: 90px;
     font-weight: bold;
-    text-shadow: 0 0 10px rgb(251, 255, 0);
+    text-shadow: 3px 3px 10px #FFFF99;
 }
 
 @keyframes sunny {
